Historia de usuario 5, En esta se realizo un cambio de estilos a casi toda la platafotma